front end started; WelcomeScreen.js implemented
